Updated to version 1.0.1
Corrected category and architectures

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name= LTC2633 miniDAC
 version=1.0.1
-author=Tamojit,Sandeepan
+author=Tamojit Saha, Sandeepan Sengupta
 maintainer=Tamojit <sahatamo1995@gmail.com>
-sentence=Library to interface with LTC2633 over i2c protocol.
-paragraph= Interface with 12/10/8 bit variants of LTC2633 over i2c protocol
-category=Communication
+sentence=Library to communicate with LTC2633 over I2C protocol bus.
+paragraph= Interfacing 12/10/8 bits variants of LTC2633 with Arduino over I2C protocol bus
+category=Data Processing
 url=https://github.com/TamojitSaha/LTC2633
-architectures=*
+architectures=AVR
