--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name= LTC2633 miniDAC
 version=1.0.1
 author=Tamojit Saha, Sandeepan Sengupta
-maintainer=Tamojit <sahatamo1995@gmail.com>
+maintainer=Tamojit Saha <sahatamo1995@gmail.com>
 sentence=Library to communicate with LTC2633 over I2C protocol bus.
 paragraph= Interfacing 12/10/8 bits variants of LTC2633 with Arduino over I2C protocol bus
 category=Data Processing
