--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=Library to communicate with LTC2633 over I2C protocol bus.
 paragraph= Interfacing 12/10/8 bits variants of LTC2633 with Arduino over I2C protocol bus
 category=Data Processing
 url=https://github.com/TamojitSaha/LTC2633
-architectures=AVR
+architectures=*
