--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Sandeepan Sengupta <http://sandeepan.info>
 sentence=Library to communicate with LTC2633 over I2C protocol bus.
 paragraph= Interfacing 12/10/8 bits variants of LTC2633 with Arduino over I2C protocol bus
 category=Data Processing
-url=https://github.com/TamojitSaha/LTC2633
+url=https://github.com/SandeepanSengupta/miniDAC-library
 architectures=*
