--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Tamojit Saha, Sandeepan Sengupta
 maintainer=Sandeepan Sengupta <mail@sandeepan.info>
 sentence=Library for Arduino miniDAC module by Tamojit Saha and Sandeepan Sengupta.
 paragraph= Additionally this library can be used to communicate with LTC2633 family of 8-bits/10-bits/12-bits unipolar DAC of over I2C protocol bus at both 100KHz and 400KHz.
-category=Data Processing
+category=Signal Input/Output
 url=https://github.com/SandeepanSengupta/miniDAC-library
 architectures=*
