--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=miniDAC
-version=0.1.0
-author=Tamojit Saha, Sandeepan Sengupta
-maintainer=Sandeepan Sengupta <http://sandeepan.info>
-sentence=Library to communicate with LTC2633 over I2C protocol bus.
-paragraph= Interfacing 12/10/8 bits variants of LTC2633 with Arduino over I2C protocol bus
-category=Data Processing
-url=https://github.com/TamojitSaha/LTC2633
+version=1.0.0
+author=Sandeepan Sengupta, Tamojit Saha
+maintainer=Sandeepan Sengupta <mail@sandeepan.info>
+sentence=Library for Arduino miniDAC module by Tamojit Saha and Sandeepan Sengupta.
+paragraph= Additionally this library can be used to communicate with LTC2633 family of 8-bits/10-bits/12-bits unipolar DAC of over I2C protocol bus at both 100KHz and 400KHz.
+category=Signal Input/Output
+url=https://github.com/SandeepanSengupta/miniDAC-library
 architectures=*
