--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=miniDAC
-version=1.0.0
-author=Sandeepan Sengupta, Tamojit Saha
+version=0.1.0
+author=Tamojit Saha, Sandeepan Sengupta
 maintainer=Sandeepan Sengupta <mail@sandeepan.info>
 sentence=Library for Arduino miniDAC module by Tamojit Saha and Sandeepan Sengupta.
 paragraph= Additionally this library can be used to communicate with LTC2633 family of 8-bits/10-bits/12-bits unipolar DAC of over I2C protocol bus at both 100KHz and 400KHz.
